<resources>
    <string name="app_name">PreScript</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="cameraDisplay">Open Camera</string>
    <string name="submit_message">submit message</string>
    <string name="verify_prescription">verify prescription</string>
    <string name="add">add a prescription</string>
    <string name="view">view prescriptions</string>

    <string name="delete">delete</string>
    <string name="confirm">confirm</string>
    <string name="cancel">cancel</string>

    <string name="take_pic">Take Picture</string>
    <string name="Confirm">Confirm</string>


    <string name="verify_message">Processing</string>

    <string name="process">Process</string>

    <string name="X">X</string>

    <string name="Back">Back</string>

    <string name="prescription_list">Prescription List</string>


</resources>
