<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_camera_verify"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.richard.prescript.CameraVerify">

    <Button
        android:id="@+id/Button"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="TakePicture"
        android:text="@string/take_pic"/>

    <Button
        android:id="@+id/Button1"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:backgroundTint="@android:color/holo_red_light"
        android:visibility="invisible"
        android:onClick="DeletePicture"
        android:text="@string/X"/>

    <Button
        android:id="@+id/Button2"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_centerHorizontal="true"
        android:onClick="GoHome"
        android:text="@string/Back"/>

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/logo"
        android:id="@+id/imageView2"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:alpha="0.3"
        />

    <ImageView
        android:id="@+id/ImageView"
        android:contentDescription="@string/app_name"
        android:layout_width="150sp"
        android:layout_height="150sp"
        android:layout_marginBottom="118dp"
        android:layout_above="@+id/Button"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/OCRTextView"
        android:textSize="18sp"
        android:layout_centerHorizontal="true"
        android:background="#dedede"
        android:textColor="#a3a3a3" />


</RelativeLayout>
